--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -4,9 +4,9 @@
     <div class="col-md-6">
         <div class="card">
                 <div class="card-body"> 
-<form action="/add" method="post">
+<form action="/api/Celulares/" method="post">
 <div class="form-group">
-    <input class="form-contol" name="id"></div>
+    <input class="form-contol" name="id" placeholder="id"></div>
     <div class="form-group">
     <input class="form-contol" name="marca"></div>
     <div class="form-group">
